# nm-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compare_rules.py  pyproject.toml
astar_island/: __init__.py  benchmark.py  client.py  config.py  experiment.py  fetch_data.py  fit.py  metrics.py  model.py  predict.py  query_selector.py  replay.py  replay_tui.py  rules.py  simulator.py  sort_replays.py  utils.py  visualize.py
astar_island/data/: round_01_settlements.json  round_03_settlements.json  round_04.npz  round_04_settlements.json  round_05.npz  round_06.npz  round_08.npz  round_08_settlements.json  round_09.npz
astar_island/data/round_01/: data.npz  replay_3_1069336121.json
astar_island/data/round_02/: data.npz  replay_0_998901502.json  settlements.json
astar_island/data/round_03/: data.npz  replay_0_546139451.json
astar_island/data/round_04/: replay_0.json  replay_0_644047869.json
astar_island/data/round_05/: replay_3_1334045320.json  settlements.json
astar_island/data/round_06/: settlements.json
astar_island/data/round_07/: data.npz  replay_0_1878447559.json  settlements.json
astar_island/data/round_08/: replay_0_12914965.json
astar_island/data/round_09/: settlements.json
astar_island/data/round_10/: data.npz  replay_0.json  replay_0_1295672959.json  replay_3_1223370704.json  replay_4_990249071.json  settlements.json
astar_island/data/round_11/: data.npz  settlements.json
astar_island/data/round_12/: data.npz  replay_0_222251770.json  settlements.json
astar_island/data/round_13/: data.npz  replay_3_723827416.json  settlements.json
astar_island/data/round_14/: data.npz  settlements.json
astar_island/data/round_15/: data.npz  replay_0_14283011.json  replay_3_42124816.json  settlements.json
astar_island/data/round_16/: data.npz  replay_0_1487972688.json  replay_3_1072724255.json  settlements.json
astar_island/data/round_17/: data.npz  settlements.json
astar_island/data/round_18/: data.npz  settlements.json
astar_island/data/round_19/: data.npz  settlements.json
astar_island/data/round_20/: data.npz  settlements.json
astar_island/data/round_21/: data.npz  settlements.json
astar_island/docs/: code.md  description.md  notes.md
astar_island/predictor/: __init__.py  baselines.py  diffuser.py  diffuser_interactions.py  fitting.py  rule_candidates.py  rule_eval.py  rulesim.py
astar_island/scripts/: compare_metrics.py  evaluate_rules.py  profile_rulesim.py  review_rule_sizes.py  verify_rules.py
astar_island/submissions/round_20/: predictions.npz  viewports.json
astar_island/submissions/round_21/: predictions.npz  viewports.json
astar_island/submissions/round_22/: metadata.json  predictions.npz  viewports.json
astar_island/submissions/round_23/: metadata.json  predictions.npz  viewports.json
nmai/tasks/astar_island/: client.py  description.md  predict.py
nmai/tasks/norgesgruppen/: .gitignore  __init__.py  description.md  evaluate.py  package.py  run.py  train.py
nmai/tasks/norgesgruppen/data/: convert.py  explore.py  load.py
nmai/tasks/tripletex/: __init__.py  solve.py
norgesgruppen/: .gitignore  Dockerfile.submission-test  __init__.py  baseline.py  evaluate.py  experiment.py  package.py  run.py  run_experiments.sh  run_utils.py  train.py
norgesgruppen/data/: __init__.py  convert.py  explore.py  load.py
norgesgruppen/docs/: code.md  description.md  notes.md
norgesgruppen/output/: scores.txt
norgesgruppen/output/20260319_231824_baseline/: score.json
norgesgruppen/output/20260319_232154_baseline/: score.json
output/: predictions.json
scripts/: stream_claude.py
tests/astar_island/: test_client.py  test_config.py  test_predict.py
tests/norgesgruppen/: test_submission.py
tripletex/: Dockerfile  __init__.py  api_reference.md  description.md  prompt.md  review_plan.py  solve.py
tripletex/docs/: openapi.json  tripletex-openapi-competition.json  tripletex-openapi.json
tripletex/scripts/: build_api_reference.py  extract_competition_openapi.py  generate_bearer_token.py  run_synthetic_tasks.py  tripletex_cli.py
tripletex/skills/: _general.md  _optimality_agent.md  _optimality_invoice.md  _optimality_ledger.md  _optimality_project.md  activity.md  customer.md  department.md  employee.md  invoice.md  ledger.md  product.md  project.md  scoring.md  timesheet.md  travel.md
tripletex/skills/optimality/: _optimality_agent.md  _optimality_employee.md  _optimality_invoice.md  _optimality_ledger.md  _optimality_travel.md
tripletex/tripletex-knowledge/: avoidable-mistakes.md  entity-deps.md  example-tasks.md  field-guide.md  id-patterns.md  openapi-inconsistencies.md  synthetic-tasks.md  unresolved-issues.md  verify.sh  workflows.md
tripletex/tripletex-knowledge/playbook/: index.md  production-log-analysis.md  sandbox-usage.md  unresolved-issues-guidelines.md
